tests/integration/pilot/test_artifacts/pilot-cdb63eb262f9489794e3c1898/TestTraffic/virtualservice/shifting-50/a/to_b_tproxy/_test_context/VirtualService.393027710.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: default
  namespace: echo-2-88348
spec:
  hosts:
  - b
  http:
  - route:
    - destination:
        host: b
      weight: 50
    - destination:
        host: tproxy
      weight: 50
